--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">Charts</string>
+    <string name="app_name">CHARTS</string>
     <string name="action_settings">Settings</string>
     <string name="title_charts">Select Chart type</string>
     <string name="title_activity_draw_chart">DrawChartActivity</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="next">Next</string>
 </resources>
